# moedict-data-csld

./: .gitignore  2013.pl  2014.pl  2015.pl  Makefile  README.md  aux.pl  config-example.yaml  csld.pl  index.json  pyproject.toml  q1.pl  q2.pl  q3.pl  q4.pl  q5-3.pl  q5.pl  simplified-unicode-mapping.csv  兩岸三地生活差異詞語彙編-同名異實.csv  兩岸三地生活差異詞語彙編-同實異名.csv  兩岸同名異實.csv  兩岸同名異實2013.csv  兩岸同實異名.csv  兩岸同實異名2013.csv  兩岸差異用詞.xlsx  國語一字多音審訂表.xlsx  國語一字多音審訂表1999.csv  國語一字多音審訂表2012.csv  大陸版字詞目及音讀.csv  大陸特有.csv  大陸特有2013.csv  字頭兩岸對照.csv  字頭資料2013.csv  字頭部首筆畫.csv  普通話異讀詞審音表2013.csv  普通話異讀詞審音表2013.xls  臺灣特有.csv  臺灣特有2013.csv  通用漢字規範表2013.csv  通用漢字規範表2013.xlsx  (+4 more)
api/: app.py  config.py  db.py  deps.py  setting.py
api/endpoints/: word.py
api/schemas/: __init__.py  msg.py  word.py
api/test/: bench.py  terms.json  test-article.txt
scripts/: init.sh
ui/: package.json
ui/app/: layout.tsx
ui/app/api/check-text/: route.ts
ui/app/checker/: page.scss  page.tsx
